feat: add users endpoints (signup/signin/logout) and auth
